XWIKI-12231: Add support for Nested Documents in the Create UI XWIKI-12431: Adapt the "rename" action for nested documents XWIKI-12217: Adapt the "copy" action for nested documents * Add support for selecting the target document from a tree picker.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/hierarchy.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/hierarchy.vm
@@ -10,6 +10,6 @@
   #if($services.parentchild.isParentChildMechanismEnabled())
     #hierarchy_parentChild()
   #else
-    #hierarchy()
+    #hierarchy($NULL {'id': 'hierarchy'})
   #end
 #end
