--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/copy.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/copy.vm
@@ -14,29 +14,28 @@
   #template("endpage.vm")
 #else
   #template("startpage.vm")
+  #template('refactoring_macros.vm')
   <div class="main layoutsubsection">
   <div id="mainContentArea">
     <div class="xcontent">
-    #set($titleToDisplay = "$services.localization.render('core.copy.title', [$escapetool.xml($doc.plainTitle), $doc.getURL()])")
+    #set ($titleToDisplay = $services.localization.render('core.copy.title',
+      [$escapetool.xml($doc.plainTitle), $doc.getURL()]))
     #template('contentheader.vm')
     ##------------------------------------------------
     ## Get source reference
     ##------------------------------------------------
-    #set($sourcewiki = "$!{request.sourceWikiName}")
-    #if("$!sourcewiki" == "")
-      #set($sourcewiki = $xcontext.database)
-    #end
-    #set($sourcespace = "$!{request.sourceSpaceName}")
-    #set($sourcepage = "$!{request.sourcePageName}")
+    #set ($sourcewiki = "$!request.sourceWikiName")
+    #set ($sourcespace = "$!request.sourceSpaceName")
+    #set ($sourcepage = "$!request.sourcePageName")
     ##------------------------------------------------
     ## Get target reference
     ##------------------------------------------------
-    #set($targetwiki = "$!{request.targetWikiName}")
-    #if("$!targetwiki" == "")
-      #set($targetwiki = $xcontext.database)
-    #end
-    #set($targetspace = "$!{request.targetSpaceName}")
-    #set($targetpage = "$!{request.targetPageName}")
+    #set ($targetwiki = "$!request.targetWikiName")
+    #set ($targetspace = "$!request.targetSpaceName")
+    #set ($targetpage = "$!request.targetPageName")
+    #set ($targetTitle = $request.targetPageTitle)
+    ## Determine if the target document should be terminal.
+    #isTargetDocumentTerminal($sourcepage)
     ##------------------------------------------------
     ## Get which translated pages we need to copy
     ##------------------------------------------------
@@ -44,44 +43,49 @@
       #set($language = "$!{request.language}")
       #set($escapedLanguage = "$!{escapetool.xml($request.language)}")
     #end
+    ##------------------------------------------------
+    ## Determine if the child pages should be copied
+    ##------------------------------------------------
+    ## We can't copy the children if the target page is terminal.
+    #set ($deep = $request.deep == 'true' && !$terminal && !$language)
     ##-------------------------------------------------------------
     ## Decide whether to perform the copy or display the copy form
     ##-------------------------------------------------------------
-    #if($sourcewiki != "" && $sourcespace != "" && $sourcepage != "" && $targetwiki != "" && $targetspace != "" && $targetpage != "" && $!{services.csrf.isTokenValid("$!{request.getParameter('form_token')}")})
+    #if ($sourcespace != '' && $sourcepage != '' && ($targetspace != '' || !$terminal) && $targetpage != ''
+        && $services.csrf.isTokenValid($request.form_token))
       #set ($locale = $services.localization.toLocale($language))
-      #set ($sourceWikiReference = $services.model.createWikiReference($sourcewiki))
-      #set ($sourceSpaceReference = $services.model.resolveSpace($sourcespace, 'explicit', $sourceWikiReference))
-      #set ($sourceDocReference = $services.model.createEntityReference($sourcepage, 'DOCUMENT', $sourceSpaceReference))
-      #set ($sourceDocReference = $services.model.createDocumentReference($sourceDocReference, $locale))
-      #set ($targetWikiReference = $services.model.createWikiReference($targetwiki))
-      #set ($targetSpaceReference = $services.model.resolveSpace($targetspace, 'explicit', $targetWikiReference))
-      #set ($targetDocReference = $services.model.createEntityReference($targetpage, 'DOCUMENT', $targetSpaceReference))
-      #set ($targetDocReference = $services.model.createDocumentReference($targetDocReference, $locale))
+      ## We use terminal=true here because $sourcepage has the real page name (e.g. WebHome)
+      #getNestedDocumentReference($sourcewiki $sourcespace $sourcepage $locale true $sourceDocReference)
+      #getNestedDocumentReference($targetwiki $targetspace $targetpage $locale $terminal $targetDocReference)
       ##-----------------------------------------------------------
       ## If the target document already exists, warn the user
       ##-----------------------------------------------------------
       #if($xwiki.exists($targetDocReference) && $!{request.overwrite} != "true")
-        #warning($services.localization.render('core.copy.alreadyExists', [$services.model.serialize($targetDocReference, 'compactwiki')]))
-        <form action="$xwiki.relativeRequestURL" class="xform third">
-          ## CSRF prevention
-          <input type="hidden" name="form_token" value="$!{services.csrf.getToken()}" />
-          <input type="hidden" name="xpage" value="copy" />
+        #warning($services.localization.render('core.copy.alreadyExists',
+          [$services.model.serialize($targetDocReference, 'compactwiki')]))
+        <form action="$xwiki.relativeRequestURL" id="copy" class="xform third" method="post">
+          ## The field values are specified in the URL. We use POST to append the "overwrite" value.
           <input type="hidden" name="overwrite" value="true" />
-          <input type="hidden" name="sourceWikiName" value="$escapetool.xml($sourcewiki)" />
-          <input type="hidden" name="sourceSpaceName" value="$escapetool.xml($sourcespace)" />
-          <input type="hidden" name="sourcePageName" value="$escapetool.xml($sourcepage)" />
-          <input type="hidden" name="targetWikiName" value="$escapetool.xml($targetwiki)" />
-          <input type="hidden" name="targetSpaceName" value="$escapetool.xml($targetspace)" />
-          <input type="hidden" name="targetPageName" value="$escapetool.xml($targetpage)" />
           <div class="buttons">
-            <span class="buttonwrapper"><input type="submit" value="$services.localization.render('core.copy.submit')" class="button"/></span>
-            <span class="buttonwrapper"><a class="secondary button" href="$doc.getURL('view', 'xpage=copy')">$services.localization.render('core.copy.changeTarget')</a></span>
-            <span class="buttonwrapper"><a class="secondary button" href="$doc.getURL()">$services.localization.render('core.copy.cancel')</a></span>
+            <span class="buttonwrapper">
+              <input type="submit" value="$services.localization.render('core.copy.submit')" class="button"/>
+            </span>
+            <span class="buttonwrapper">
+              <a class="secondary button" href="$doc.getURL('view', 'xpage=copy')">
+                $services.localization.render('core.copy.changeTarget')
+              </a>
+            </span>
+            <span class="buttonwrapper">
+              <a class="secondary button" href="$doc.getURL()">$services.localization.render('core.copy.cancel')</a>
+            </span>
           </div>
         </form>
       #else
+        ## TODO: We should set the title specified on the request.
         #set ($success = false)
-        #set ($copyAsJob = $services.refactoring.copyAs($sourceDocReference, $targetDocReference))
+        #set ($copyAsRequest = $services.refactoring.createCopyAsRequest($sourceDocReference, $targetDocReference))
+        #set ($discard = $copyAsRequest.setDeep($deep))
+        #set ($copyAsJob = $services.refactoring.copyAs($copyAsRequest))
         #try()
           #set ($discard = $copyAsJob.join())
           #set ($copyAsJobStatus = $services.job.getJobStatus($copyAsJob.request.id))
@@ -95,108 +99,110 @@
             #set($fromurl = $xwiki.getURL($sourceDocReference))
             #set($tourl = $xwiki.getURL($targetDocReference))
           #end
-          #set($sourcelink = "<a href='${fromurl}'>$!{escapetool.xml($sourceDocReference.name)} #if($escapedLanguage)($escapedLanguage)#end</a>")
-          #set($targetlink = "<a href='${tourl}'>$!{escapetool.xml($targetDocReference.name)}</a>")
+          #set ($sourceDocTitle = $xwiki.getDocument($sourceDocReference).plainTitle)
+          #set($sourcelink = "<a href='${fromurl}'>$!escapetool.xml($sourceDocTitle)
+            #if($escapedLanguage)($escapedLanguage)#end</a>")
+          #set ($targetDocTitle = $xwiki.getDocument($targetDocReference).plainTitle)
+          #set($targetlink = "<a href='${tourl}'>$!escapetool.xml($targetDocTitle)</a>")
           #info($services.localization.render('core.copy.copyingdoc', [$sourcelink, $targetlink]))
         #else
           #error($services.localization.render('core.rename.targetNotWritable'))
         #end
       #end
     #else
-    <form action="$xwiki.relativeRequestURL" class="xform third">
-    <div class="hidden">
-      ## CSRF prevention
-      <input type="hidden" name="form_token" value="$!{services.csrf.getToken()}" />
-      <input type="hidden" name="xpage" value="copy" />
-    </div>
-    <dl>
-      ##------------------
-      ## Wiki Source field
-      ##------------------
-      #set ($displayWikiFields = ($xcontext.userReference.wikiReference.name == $xcontext.mainWikiName) && $xwiki.hasSubWikis())
-      #if ($displayWikiFields)
-      <dt>
-        <label for="sourceWikiName">$services.localization.render('core.copy.sourcewiki')</label>
-        <span class="xHint">$services.localization.render('core.copy.sourcewiki.hint')</span>
-      </dt>
-      <dd>$!{escapetool.xml($doc.wiki)} <input type="hidden" id="sourceWikiName" name="sourceWikiName" value="$!{escapetool.xml($doc.wiki)}" size="60"/></dd>
-      #end
-      ##------------------
-      ## Space Source field
-      ##------------------
-      <dt>
-        <label for="sourceSpaceName">$services.localization.render('core.copy.sourcespace')</label>
-        <span class="xHint">$services.localization.render('core.copy.sourcespace.hint')</span>
-      </dt>
-      <dd>$!{escapetool.xml($doc.space)} <input type="hidden" id="sourceSpaceName" name="sourceSpaceName" value="$!{escapetool.xml($doc.space)}" size="60"/></dd>
-      ##------------------
-      ## Page Source field
-      ##------------------
-      <dt>
-        <label for="sourcePageName">$services.localization.render('core.copy.sourcepage')</label>
-        <span class="xHint">$services.localization.render('core.copy.sourcepage.hint')</span>
-      </dt>
-      <dd>$!{escapetool.xml($doc.name)} <input type="hidden" id="sourcePageName" name="sourcePageName" value="$!{escapetool.xml($doc.name)}" size="60"/></dd>
-      ##------------------
-      ## Translation field
-      ##------------------
-      #set ($docTranslations = $doc.getTranslationList())
-      #if ($xwiki.isMultiLingual() && $docTranslations.size() > 0)
-      <dt>
-        <label for="language">$services.localization.render('language')</label>
-        <span class="xHint">$services.localization.render('core.copy.language.hint')</span>
-      </dt>
-      <dd>
-        <select id="language" name="language">
-          ## Add a special "All Translations" combo box entry to copy all translations.
-          <option value="ALL" selected="selected">$services.localization.render('core.copy.allTranslations')</option>
-          ## Add all the existing translations
-          #foreach ($docTranslation in $docTranslations)
-            <option>$docTranslation</option>
+    <form action="$xwiki.relativeRequestURL" id="copy" class="xform">
+      <div class="hidden">
+        ## CSRF prevention
+        <input type="hidden" name="form_token" value="$!{services.csrf.getToken()}" />
+        <input type="hidden" name="xpage" value="copy" />
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-lg-6">
+          <dl>
+            ##------------
+            ## Source Page
+            ##------------
+            #displaySourceDocument({
+              'label': 'core.copy.source.label',
+              'hint': 'core.copy.source.hint'
+            })
+            ##------------------
+            ## Translation field
+            ##------------------
+            #displayTranslationSelector({
+              'hint': 'core.copy.language.hint'
+            })
+            ##---------------
+            ## Children field
+            ##---------------
+            #displayChildrenCheckbox({
+              'label': 'core.copy.children.label',
+              'hint': 'core.copy.children.hint'
+            })
+          </dl>
+        </div>
+        <div class="col-xs-12 col-lg-6">
+          ##------------
+          ## Target Page
+          ##------------
+          #template('locationPicker_macros.vm')
+          #set ($parentReference = $doc.documentReference.parent)
+          #set ($name = $doc.name)
+          #if ($doc.name == $defaultDocumentName)
+            #set ($name = $parentReference.name)
+            #set ($parentReference = $parentReference.parent)
           #end
-        </select>
-      </dd>
-      #end
-      ##------------------
-      ## Wiki Target field
-      ##------------------
-      #if ($displayWikiFields)
-      <dt>
-        <label for="targetWikiName">$services.localization.render('core.copy.targetwiki')</label>
-        <span class="xHint">$services.localization.render('core.copy.targetwiki.hint')</span>
-      </dt>
-      <dd>
-        <select id="targetWikiName" name="targetWikiName">
-          #set ($wikis = $xwiki.wikiNames)
-          #foreach ($wiki in $wikis)
-            <option #if ($wiki == $doc.wiki) selected="selected" #end>$!{escapetool.xml($wiki)}</option>
-          #end
-        </select>
-      </dd>
-      #end
-      ##-------------------
-      ## Space Target field
-      ##-------------------
-      <dt>
-        <label for="targetSpaceName">$services.localization.render('core.copy.targetspace')</label>
-        <span class="xHint">$services.localization.render('core.copy.targetspace.hint')</span>
-      </dt>
-      <dd>
-        <input type="text" name="targetSpaceName" id="targetSpaceName" size="60" class="suggestSpaces" value="$!{escapetool.xml($doc.space)}"/>
-      </dd>
-      ##------------------
-      ## Page Target field
-      ##------------------
-      <dt>
-        <label for="targetPageName">$services.localization.render('core.copy.targetpage')</label>
-        <span class="xHint">$services.localization.render('core.copy.targetpage.hint')</span>
-      </dt>
-      <dd><input type="text" id="targetPageName" name="targetPageName" value="$!{escapetool.xml($doc.name)}" size="60" /></dd>
-    </dl>
-    <div class="buttons">
-      <span class="buttonwrapper"><input type="submit" value="$services.localization.render('core.copy.submit')" class="button"/></span>
-      <span class="buttonwrapper"><a class="secondary button" href="$doc.getURL()">$services.localization.render('core.copy.cancel')</a></span>
-    </div>
+          #locationPicker({
+            'id': 'target',
+            'title': {
+              'label': 'core.copy.target.title.label',
+              'hint': 'core.copy.target.title.hint',
+              'name': 'targetPageTitle',
+              'value': $doc.plainTitle,
+              'placeholder': 'core.create.name.placeholder'
+            },
+            'preview': {
+              'label': 'core.copy.target.location.label',
+              'hint': 'core.copy.target.location.hint'
+            },
+            'wiki': {
+              'label': 'core.copy.target.wiki.label',
+              'hint': 'core.copy.target.wiki.hint',
+              'name': 'targetWikiName',
+              'value': $doc.wiki
+            },
+            'parent': {
+              'label': 'core.copy.target.parent.label',
+              'hint': 'core.copy.target.parent.hint',
+              'name': 'targetSpaceName',
+              'reference': $parentReference,
+              'placeholder': 'core.create.spaceReference.placeholder'
+            },
+            'name': {
+              'label': 'core.copy.target.name.label',
+              'hint': 'core.copy.target.name.hint',
+              'name': 'targetPageName',
+              'value': $name,
+              'placeholder': 'core.create.name.placeholder'
+            }
+          })
+          ## -------------------------------------
+          ## Target Page Type (for advanced users)
+          ## -------------------------------------
+          #maybeDisplayTerminalCheckbox({
+            'label': 'core.copy.target.terminal.label',
+            'hint': 'core.copy.target.terminal.hint'
+          })
+        </div>
+      </div>
+      <div class="buttons">
+        <span class="buttonwrapper">
+          <input type="submit" value="$services.localization.render('core.copy.submit')" class="button"/>
+        </span>
+        <span class="buttonwrapper">
+          <a class="secondary button" href="$doc.getURL()">$services.localization.render('core.copy.cancel')</a>
+        </span>
+      </div>
     </form>
     #end
     <div class="clearfloats"></div>
