--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/hierarchy_reference.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/hierarchy_reference.vm
@@ -5,4 +5,9 @@
 ## Initially made to be used in an AJAX call when generating the location preview of a new page.
 ##
 #template('hierarchy_macros.vm')
-#hierarchy()
+#set ($hierarchyDoc = $tdoc)
+#if ("$!request.reference" != '')
+  #set ($documentReference = $services.model.resolveDocument($request.reference))
+  #set ($hierarchyDoc = $xwiki.getDocument($documentReference))
+#end
+#hierarchy($hierarchyDoc)
