XWIKI-12205: Add the support of nested spaces in the Javascript API.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/htmlheader.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/htmlheader.vm
@@ -11,6 +11,7 @@
   data-xwiki-${name}="$escapetool.xml($value)"
 #end
 <html xmlns="http://www.w3.org/1999/xhtml" lang="$xcontext.language" xml:lang="$xcontext.language"
+  #xwikiDataAttribute('document-reference', $services.model.serialize($doc.documentReference, 'default'))
   #xwikiDataAttribute('document', $doc.fullName)
   #xwikiDataAttribute('wiki', $doc.wiki)
   #xwikiDataAttribute('space', $doc.space)
