--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/htmlheader.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/htmlheader.vm
@@ -14,6 +14,10 @@
 ## NOTE: you should not use these attributes in javascript directly, but via the 'xwiki-meta' module instead:
 ## http://platform.xwiki.org/xwiki/bin/view/DevGuide/JavaScriptAPI#HGetsomeinformationaboutthecurrentdocument
   #xwikiDataAttribute('document-reference', $services.model.serialize($doc.documentReference, 'default'))
+  #xwikiDataAttribute('document', $doc.fullName)
+  #xwikiDataAttribute('wiki', $doc.wiki)
+  #xwikiDataAttribute('space', $doc.space)
+  #xwikiDataAttribute('page', $doc.name)
   #xwikiDataAttribute('version', $doc.version)
   #xwikiDataAttribute('rest-url', $services.rest.url($doc.documentReference).path)
   #xwikiDataAttribute('form-token', "$!{services.csrf.token}")>
