--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/htmlheader.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/htmlheader.vm
@@ -11,13 +11,15 @@
   data-xwiki-${name}="$escapetool.xml($value)"
 #end
 <html xmlns="http://www.w3.org/1999/xhtml" lang="$xcontext.language" xml:lang="$xcontext.language"
-## NOTE: you should not use these attributes in javascript directly, but via the 'xwiki-meta' module instead:
-## http://platform.xwiki.org/xwiki/bin/view/DevGuide/JavaScriptAPI#HGetsomeinformationaboutthecurrentdocument
+  ## NOTE: you should not use these attributes in javascript directly, but via the 'xwiki-meta' module instead:
+  ## http://platform.xwiki.org/xwiki/bin/view/DevGuide/JavaScriptAPI#HGetsomeinformationaboutthecurrentdocument
   #xwikiDataAttribute('document-reference', $services.model.serialize($doc.documentReference, 'default'))
+  ## START: Kept for backward compatibility reasons even though the recommended way is through the 'xwiki-meta' module
   #xwikiDataAttribute('document', $doc.fullName)
   #xwikiDataAttribute('wiki', $doc.wiki)
   #xwikiDataAttribute('space', $doc.space)
   #xwikiDataAttribute('page', $doc.name)
+  ## STOP: Kept for backward compatibility reasons even though the recommended way is through the 'xwiki-meta' module
   #xwikiDataAttribute('version', $doc.version)
   #xwikiDataAttribute('rest-url', $services.rest.url($doc.documentReference).path)
   #xwikiDataAttribute('form-token', "$!{services.csrf.token}")>
