XWIKI-12268: Adapt the "delete" action for nested documents.
* Add a parameter to decide if the delete action is asynchronous or not
* By default, the delete action is synchronous (for retro-compatibility with scripts)
* In the UI, the async parameter is set to true

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/delete.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/delete.vm
@@ -189,6 +189,7 @@
   <div class="hidden">
     <input type="hidden" name="form_token" value="$!{services.csrf.getToken()}" />
     <input type="hidden" name="confirm" value="1"/>
+    <input type="hidden" name="async" value="true"/>
     #if("$!{request.xredirect}" != '')
       <input type="hidden" name="xredirect" value="$!{escapetool.xml($request.xredirect)}"/>
     #end
